fixed location spacing in signup

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -850,3 +850,7 @@ a:hover,
   background-color: var(--clay);
   color: var(--gray);
 }
+
+#location-signup {
+  margin-left: 2%;
+}
